# openclaw-main-agent

./: .env.example  .gitignore  AGENTS.md  BOOT.md  BOOTSTRAP.md  CLAUDE.md  HEARTBEAT.md  IDENTITY.md  README.md  SOUL.md  TOOLS.md  USER.md  calendar_output.txt  daily_brief_output.txt  docker-compose.yml  summary.txt
agent_claude/: SOUL.md
briefing/: PROTOCOL.md  daily_briefing_2026-02-10.md
doc_ops/: ocr_pdf.py
factory/: SOUL.md  agent.yaml
gatekeeper/: SOUL.md  agent.yaml
hr_ops/: PROTOCOL.md  SOUL.md  approve_workday.js  get_token.js  sso_fix.py
instagram/: PROTOCOL.md  act_instagram.py  bot.py  calibrate_iphone.py  fetch_targets.py  iphone_driver.py  iphone_driver_v2.py  session.json  setup_session.py  targets.json
mail_ops/: .env.template  PROTOCOL.md  SOUL.md  analyze_waldemar_content.py  analyze_waldemar_hours.py  apologize_scores.py  approve_40059.py  approve_batch_2.py  approve_batch_reply_all.py  approve_direct.py  approve_gatekeeper_batch.py  approve_prs_email.py  audit_rib.py  auth_google.py  booking_scanner.py  calendar_checker.py  calendar_ops.py  check_and_create.py  check_booking.py  check_exists.py  config.yaml  consolidate_folders.py  create_booking.py  create_draft.py  create_event_cli.py  create_karin_trip.py  create_kita_events.py  create_thefork_event.py  create_u9_event.py  custom_check_georg_prs.py  daily_brief.py  debug_pr_search.py  deep_clean_folders.py  ensure_folders.py  (+12 more)
tools/pipeline_runner/: Dockerfile  pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  main.py
tools/pipeline_runner/tests/: test_main.py
(+74 files in other folders)
